--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "mdbreact": "^5.2.0",
     "react": "^17",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^17",
